# rusty_tanks

./: Cargo.toml
Logs/: TracerResult.json
assets/: shell.glb  tankBlend.glb
assets/concept_tank/: license.txt  scene.gltf
blender_assets/: shell.blend  shell.blend1  tankBlend.blend  tankBlend.blend1
blender_assets/assets/materials/tractor-tyre_7d0b0b09-6f81-488a-9239-e947d4ca3d5f/: tractor-tyre_2K_654b9004-ca87-4971-894c-1e6fd50b154b.blend
docs/: ToDo.txt
