[package]
name = "rusty_tanks"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["jpeg"] }
bevy_rapier3d = { version = "0.29.0", features = ["debug-render-3d"] }
bevy_panorbit_camera = "0.25.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3